--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: android
 dist: trusty
+
 android:
   components:
     # Uncomment the lines below if you want to
@@ -22,3 +23,6 @@ android:
     # if you need to run emulator(s) during your tests
     - sys-img-x86-android-26
     - sys-img-armeabi-v7a-android-17
+
+before_install:
+  - chmod +x gradlew
