--- a/.travis.yml
+++ b/.travis.yml
@@ -24,5 +24,5 @@ android:
     - sys-img-x86-android-26
     - sys-img-armeabi-v7a-android-17
 
-before_install:
-  - chmod +x gradlew
+#before_install:
+#  - chmod +x gradlew
