--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,21 @@
 language: android
 dist: trusty
 
+env:
+  global:
+    # install timeout in minutes (2 minutes by default)
+    - ANDROID_API_LEVEL=29
+    - ANDROID_BUILD_TOOLS_VERSION=29.0.3
+    - ANDROID_ABI=armeabi-v7a
+
 android:
   components:
-    # Uncomment the lines below if you want to
-    # use the latest revision of Android SDK Tools
+    # Android SDK Tools
     # - tools
     # - platform-tools
 
     # The BuildTools version used by your project
-    - build-tools-29.0.3
+    - build-tools-$ANDROID_BUILD_TOOLS_VERSION
 
     # The SDK version used to compile your project
     - android-29
@@ -19,25 +25,19 @@ android:
     - extra-google-m2repository
     - extra-android-m2repository
 
-    # Specify at least one system image,
-    # if you need to run emulator(s) during your tests
-    - sys-img-x86-android-26
-    - sys-img-armeabi-v7a-addon-google_apis-google-29
+    # System images
+    - sys-img-$ANDROID_ABI-addon-google_apis-google-$ANDROID_API_LEVEL
 
+    # Licenses
     licenses:
       - 'android-sdk-license-.+'
 
-env:
-  global:
-    # install timeout in minutes (2 minutes by default)
-    - ADB_INSTALL_TIMEOUT=8
-
 # Emulator Management: Create, Start and Wait
 before_script:
-  - echo no | android create avd --force -n test -t android-29 --abi google_apis/armeabi-v7a
+  - echo no | android create avd --force -n test -t android-$ANDROID_API_LEVEL --abi google_apis/$ANDROID_ABI
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
-  - adb shell input keyevent 82 &
+#  - adb shell input keyevent 82 &
 
 script:
   - android list target
