--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ env:
     - ANDROID_API_LEVEL=29
     - ANDROID_BUILD_TOOLS_VERSION=29.0.3
     - ANDROID_ABI=armeabi-v7a
+    - ANDROID_TAG=google_apis
 
 android:
   components:
@@ -18,7 +19,7 @@ android:
     - build-tools-$ANDROID_BUILD_TOOLS_VERSION
 
     # The SDK version used to compile your project
-    - android-29
+    - android-$ANDROID_API_LEVEL
 
     # Additional components
     - extra-google-google_play_services
@@ -26,7 +27,7 @@ android:
     - extra-android-m2repository
 
     # System images
-    - sys-img-$ANDROID_ABI-addon-google_apis-google-$ANDROID_API_LEVEL
+    - sys-img-armeabi-v7a-google_apis-$ANDROID_API_LEVEL
 
 #    # Licenses
 #    licenses:
@@ -34,7 +35,7 @@ android:
 
 # Emulator Management: Create, Start and Wait
 before_script:
-  - echo no | android create avd --force -n test -t android-$ANDROID_API_LEVEL --abi google_apis/$ANDROID_ABI
+  - echo no | android create avd --force -n test -t "android-29" --abi $ANDROID_ABI --tag $ANDROID_TAG
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
 #  - adb shell input keyevent 82 &
