--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,9 @@ dist: trusty
 env:
   global:
     # install timeout in minutes (2 minutes by default)
-    - ANDROID_API_LEVEL=29
-    - ANDROID_BUILD_TOOLS_VERSION=29.0.3
-    - ANDROID_ABI=armeabi-v7a
+    - ANDROID_API_LEVEL=25
+    - ANDROID_BUILD_TOOLS_VERSION=25.0.3
+    - ANDROID_ABI=sys-img-armeabi-v7a-android-apis-25
     - ANDROID_TAG=google_apis
 
 android:
@@ -35,7 +35,7 @@ android:
 
 # Emulator Management: Create, Start and Wait
 before_script:
-  - echo no | android create avd --force -n test -t "android-29" --abi $ANDROID_ABI --tag $ANDROID_TAG
+  - echo no | android create avd --force -n test -t "android-$ANDROID_API_LEVEL" --abi $ANDROID_ABI --tag $ANDROID_TAG
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
 #  - adb shell input keyevent 82 &
