--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ dist: trusty
 
 env:
   global:
-    # install timeout in minutes (2 minutes by default)
     - ANDROID_API_LEVEL=25
     - ANDROID_BUILD_TOOLS_VERSION=25.0.3
     - ANDROID_ABI=google_apis/armeabi-v7a
@@ -34,14 +33,21 @@ android:
 #    licenses:
 #      - 'android-sdk-license-.+'
 
+before_install:
+  - chmod +x gradlew
+
+install:
+  travis_wait $ADB_INSTALL_TIMEOUT mvn install
+
 # Emulator Management: Create, Start and Wait
 before_script:
-  - echo no | android create avd --force -n test -t "android-$ANDROID_API_LEVEL" --abi $ANDROID_ABI --tag $ANDROID_TAG
-  - emulator -avd test -no-skin -no-audio -no-window &
+  - echo no | android create avd --force -n test -t "android-$ANDROID_API_LEVEL" --abi $ANDROID_ABI #--tag $ANDROID_TAG
+#  - emulator -avd test -no-skin -no-audio -no-window &
+  - emulator -avd test -no-skin -no-audio -no-window -verbose -debug init &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 
 script:
   - android list target
 #  - ./gradlew connectedAndroidTest
-  - "./gradlew clean build connectedCheck -PdisablePreDex --stacktrace"
+  - ./gradlew clean testReleaseUnitTest # assembleRelease publishApkRelease
