--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ before_install:
 # Emulator Management: Create, Start and Wait
 before_script:
   - echo no | android create avd --force -n test -t "android-$ANDROID_API_LEVEL" --abi $ANDROID_ABI #--tag $ANDROID_TAG
-  - emulator -avd test -no-skin -no-audio -no-window -gpu off & # init &
+  - emulator -avd test -no-skin -no-window -gpu off & # init &
   - android-wait-for-emulator
   - adb devices
   - adb shell input keyevent 82 &
